--- a/index.html
+++ b/index.html
@@ -86,15 +86,45 @@
             </div>
             <br>
             <br>
+            <div data-section class="section">
+                <h3 class="section__title">Explore this chart...</h3>
+                <br>
+                <iframe width="652.0381355932203" height="370.38247863247864" seamless frameborder="0" scrolling="no"
+                    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ0HWQj_yPDABqmRG12ssAnKe7Pwx0mk7ZkZpJagAuT12iO6tiaAgfuejm2TGXchNlz_LmLqQQGEwai/pubchart?oid=455048405&format=interactive"></iframe>
+            </div>
+            <br>
+            <br>
+            <div data-section class="section">
+                <h3 class="section__title">Leaderboard</h3>
+                <br>
+            <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
+                src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSX7uG1pVnMiq8WkizZOCIK2gjY651X8hfrVfLOKQE9zB7T0NqO91NWftMzaPXSInu-Ad2gFGtf5EFx/pubchart?oid=2119877749&format=interactive"></iframe>
+            </div>
+           
+                <br>
+                <br>
+        
+            <div data-section class="section">
+                <h3 class="section__title">Sign up</h3>
+                <br>
+                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/xleboaod"
+                    method="post">
+                    <fieldset id="fs-frm-inputs">
+                        <label for="full-name">Full Name</label>
+                        <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+                        <label for="email-address">Email Address</label>
+                        <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+                        <label for="tournamentID">Tournament ID</label>
+                        <textarea rows="2" name="tournamentID" id="tournamentID" placeholder="2600" required=""></textarea>
+                        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+                    </fieldset>
+                    <br />
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+            <br>
             <br>
             <p><i style="color: purple;">Good luck everyone!</i></p>
-
-
-
-
-            <br>
-            <br>
-            <br>
             <br>
             <br>
             <br>
