--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div data-section class="section">
                 <h3 class="section__title">Explore this chart...</h3>
                 <br>
-                <iframe width="652.0381355932203" height="370.38247863247864" seamless frameborder="0" scrolling="no"
+                <iframe width="652.0381355932203" height="370.38247863247864" style="max-width:100%;"  seamless frameborder="0" scrolling="no"
                     src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ0HWQj_yPDABqmRG12ssAnKe7Pwx0mk7ZkZpJagAuT12iO6tiaAgfuejm2TGXchNlz_LmLqQQGEwai/pubchart?oid=455048405&format=interactive"></iframe>
             </div>
             <br>
@@ -97,7 +97,7 @@
             <div data-section class="section">
                 <h3 class="section__title">Leaderboard</h3>
                 <br>
-            <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
+            <iframe width="600" height="371"  style="max-width:100%;"  seamless frameborder="0" scrolling="no"
                 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSX7uG1pVnMiq8WkizZOCIK2gjY651X8hfrVfLOKQE9zB7T0NqO91NWftMzaPXSInu-Ad2gFGtf5EFx/pubchart?oid=2119877749&format=interactive"></iframe>
             </div>
            
@@ -124,7 +124,6 @@
             </div>
             <br>
             <br>
-            <p><i style="color: purple;">Good luck everyone!</i></p>
             <br>
             <br>
             <br>
@@ -132,12 +131,15 @@
             <br>
             <br>
             <br>
-            <p><i>Skyra is for entertainment and collectibles. In no way is this project for gambling purposes.</i></p>
             <br>
             <br>
             <br>
-            <br>
-            <footer> © Skyra 2024 </footer>
+            <footer class="footer"> 
+                <p><i style="color: purple;">Good luck everyone!</i></p>
+                <br>
+                <p><i>Skyra is for entertainment and collectibles. In no way is this project for gambling purposes.</i></p>
+                <br>
+                <p>© Skyra 2024</p> </footer>
         </div>
 
     </div>
