--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <br>
                 <br>
                 <br>
+                
                 <p><i style="color: purple;">Good luck everyone!</i></p>
                 <br>
                 <p><i>Skyra is for entertainment and collectibles. In no way is this project for gambling purposes.</i></p>
@@ -153,21 +154,23 @@
                         <li class="menu-footer__item">
                             <a href="" class="menu-footer__link">Disclaimer</a>
                         </li>
-                        <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
-                                <img src="img/social-icons/social-icon_01.png" alt="social-icon">
-                            </a>
-                        </li>
-                        <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
-                                <img src="img/social-icons/social-icon_02.png" alt="social-icon">
-                            </a>
-                        </li>
-                        <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
-                                <img src="img/social-icons/social-icon_03.png" alt="social-icon">
-                            </a>
-                        </li>
+                        <ul class="menu-footer__social-list">
+                            <li class="menu-footer__item">
+                                <a href="" class="menu-footer__link">
+                                    <img src="img/social-icons/social-icon_01.png" alt="social-icon">
+                                </a>
+                            </li>
+                            <li class="menu-footer__item">
+                                <a href="" class="menu-footer__link">
+                                    <img src="img/social-icons/social-icon_02.png" alt="social-icon">
+                                </a>
+                            </li>
+                            <li class="menu-footer__item">
+                                <a href="" class="menu-footer__link">
+                                    <img src="img/social-icons/social-icon_03.png" alt="social-icon">
+                                </a>
+                            </li>
+                        </ul>
                     </ul>
                 </nav>
             </div>
