--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <header class="header">
             <div class="header__container">
-                <div class="header__logo">Skyra</div>
+                <a href="" class="header__logo">Skyra</a>
                 <nav class="menu">
                     <ul class="menu__list">
 
