--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                     <br>
                     <p>Join us for weekly races. Weekly releases are below:</p>
                     <br>
+                    <!-- THIS IS SUB-SECTION OF THE PAGE -->
+                    <!-- in the "data-subsection" attribute, write the text that will be displayed in the header as a link to this sub-section and will scroll when you click on it -->
+                    <div data-subsection="Sub-Section">
+                        <h4 class="section__subsection-title">Subsection</h4>
+                        <br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex animi vitae ea mollitia, sequi aut rem consequatur modi, nulla incidunt est dolores odit? Delectus saepe vero fugit magni inventore?
+                    </div>
+                    <br>
                     <!-- use the "ul" tag to create a list  -->
                     <ul>
                         <!-- the "li" tag is a list item -->
