--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                   <!-- THIS IS SECTION OF THE PAGE -->
                 <!-- in the "data-section" attribute, write the text that will be displayed in the header as a link to this section and will scroll when you click on it -->
                 <div data-section="Ride the bike" class="section">
+                      <!-- this title of section -->
                     <h3 class="section__title">Ride the bike</h3>
                     <br>
                     <p>To win a contest, all of your picks must be correct.</p>
