--- a/index.html
+++ b/index.html
@@ -222,25 +222,18 @@
                 <br>
                   <!-- THIS IS SECTION OF THE PAGE -->
                 <!-- in the "data-section" attribute, write the text that will be displayed in the header as a link to this section and will scroll when you click on it -->
-                <div data-section="Sign up" class="section">
-                    <h3 class="section__title">Sign up</h3>
+                <div data-section="Extra" class="section">
+                    <h3 class="section__title">Extra</h3>
                     <br>
-                    <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8"
-                        action="https://formspree.io/xleboaod" method="post">
-                        <fieldset id="fs-frm-inputs">
-                            <label for="full-name">Full Name</label>
-                            <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
-                            <label for="email-address">Email Address</label>
-                            <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld"
-                                required="">
-                            <label for="tournamentID">Tournament ID</label>
-                            <textarea rows="2" name="tournamentID" id="tournamentID" placeholder="2600"
-                                required=""></textarea>
-                            <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-                        </fieldset>
-                        <br />
-                        <input type="submit" value="Submit">
-                    </form>
+                    <div class="table-wrapper" markdown="block">
+
+                        |title1|title2|title3|title4|title5|title6|title7|title8|
+                        |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
+                        |1|2|3|4|5|6|7|8|
+                        |1|2|3|4|5|6|7|8|
+                        |1|2|3|4|5|6|7|8|
+                        |1|2|3|4|5|6|7|8|
+
                 </div>
                 <!-- THIS IS END OF THE SECTION -->
                 
@@ -263,19 +256,13 @@
                 <nav class="menu-footer">
                     <ul class="menu-footer__list">
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Terms and Conditions</a>
+                            <a href="" class="menu-footer__link">Privacy Policy</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Grant Program Terms</a>
+                            <a href="" class="menu-footer__link">Terms of Use</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">FAQ</a>
-                        </li>
-                        <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Contact Us</a>
-                        </li>
-                        <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Disclaimer</a>
+                            <a href="" class="menu-footer__link">IP Rights</a>
                         </li>
                         <ul class="menu-footer__social-list">
                             <li class="menu-footer__item">
