--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- HERE PAGE -->
         <main class="page">
             <div class="page__container">
-                <strong><i>Ride the bike. Drive the car. Take the boat.</i></strong>
+                <strong><i>Travel the world in style!</i></strong>
                 <br>
                 <br>
                 <!-- THIS IS SECTION OF THE PAGE -->
@@ -225,15 +225,51 @@
                 <div data-section="Extra" class="section">
                     <h3 class="section__title">Extra</h3>
                     <br>
-                    <div class="table-wrapper" markdown="block">
+                    <!-- THIS IS TABLE -->
+                    <div class="section__table">
+                        <table>
+                            <thead>
+                                <!-- HEAD OF THE TABLE WITH CHAPTERS  -->
+                                <tr>
+                                    <th>Country</th>
+                                    <th>City</th>
+                                    <th>Food</th>
+                                    <th>Sites</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- ROW OF THE TABLE -->
+                                <tr>
+                                    <td>Ukraine</td>
+                                    <td>Kyiv</td>
+                                    <td>Borscht</td>
+                                    <td>Maidan</td>
+                                </tr>
+                                 <!-- ROW OF THE TABLE -->
+                                <tr>
+                                    <td>Croatia</td>
+                                    <td>Zagreb</td>
+                                    <td>Kulen</td>
+                                    <td>Golden Horn Beach</td>
+                                </tr>
+                                 <!-- ROW OF THE TABLE -->
+                                <tr>
+                                    <td>South Korea</td>
+                                    <td>Seoul</td>
+                                    <td>Bibimbap</td>
+                                    <td>Seoul Tower</td>
+                                </tr>
+                                 <!-- ROW OF THE TABLE -->
+                                <tr>
+                                    <td>Italy</td>
+                                    <td>Lucca</td>
+                                    <td>Trattoria</td>
+                                    <td>Guinigi Tower</td>
+                                </tr>
+                            </tbody>
+                        </table>
 
-                        |title1|title2|title3|title4|title5|title6|title7|title8|
-                        |:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|
-                        |1|2|3|4|5|6|7|8|
-                        |1|2|3|4|5|6|7|8|
-                        |1|2|3|4|5|6|7|8|
-                        |1|2|3|4|5|6|7|8|
-
+                    </div>
                 </div>
                 <!-- THIS IS END OF THE SECTION -->
                 
