--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main-styles.css">
-    <title>Egg</title>
+    <title>Skyra</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <a href="" class="header__logo">
                     <!-- HER LOGO, NOW IT'S JUST TEXT -->
                     <!-- In the "font-size" style, specify the font size. In the "font-family" style, specify which font you want to use. -->
-                    <span style="font-size: 30px; font-family: Courier, New, sans-serif;">yEgg</span>
+                    <span style="font-size: 30px; font-family: Courier, New, sans-serif;">Skyra</span>
                     <!-- If you want a picture of the logo, use the following tag :
                     <img style="max-width: 100px;" src="img/logo.png" alt="logo">
                     where in the "src" attribute you need to specify the path to the logo image. And in the "max-width" style, its width of image. So you can customize the size of the logo -->
