--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <!-- HERE PAGE -->
         <main class="page">
             <div class="page__container">
-                <strong><i>Travel the world in style!</i></strong>
+                <strong><i>Skyra here. Skyra there. Skyra everywhere.</i></strong>
                 <br>
                 <br>
                 <!-- THIS IS SECTION OF THE PAGE -->
                 <!-- in the "data-section" attribute, write the text that will be displayed in the header as a link to this section and will scroll when you click on it -->
-                <div data-section="What is Skyra?" class="section">
+                <div data-section="Welcome to Skyra" class="section">
                     <!-- this title of section -->
-                    <h3 class="section__title">What is Skyra?</h3>
+                    <h3 class="section__title">Welcome to Skyra</h3>
                     <!--the "br" tag is a downward indent with its help you can adjust the distance between elements (the more <br> tags, the greater the distance)  -->
                     <br>
                     <!-- the "p" tag is a regular paragraph of text -->
