--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
                     <br>
                     <!-- THIS IS SUB-SECTION OF THE PAGE -->
                     <!-- in the "data-subsection" attribute, write the text that will be displayed in the header as a link to this sub-section and will scroll when you click on it -->
-                    <div data-subsection="Sub-Section">
-                        <h4 class="section__subsection-title">Subsection</h4>
+                    <div data-subsection="You Made It">
+                        <h4 class="section__subsection-title">You Made It</h4>
+                        <br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex animi vitae ea mollitia, sequi aut rem consequatur modi, nulla incidunt est dolores odit? Delectus saepe vero fugit magni inventore?
+                    </div>
+                    <div data-subsection="Come Back Again!">
+                        <h4 class="section__subsection-title">Come Back Again!</h4>
                         <br>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex animi vitae ea mollitia, sequi aut rem consequatur modi, nulla incidunt est dolores odit? Delectus saepe vero fugit magni inventore?
                     </div>
