--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                         <br>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex animi vitae ea mollitia, sequi aut rem consequatur modi, nulla incidunt est dolores odit? Delectus saepe vero fugit magni inventore?
                     </div>
-                    <div data-subsection="Come Back Again!">
-                        <h4 class="section__subsection-title">Come Back Again!</h4>
+                    <br>
+                    <div data-subsection="See You Soon">
+                        <h4 class="section__subsection-title">See You Soon</h4>
                         <br>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ex animi vitae ea mollitia, sequi aut rem consequatur modi, nulla incidunt est dolores odit? Delectus saepe vero fugit magni inventore?
                     </div>
