--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="" class="header__logo">
                     <!-- HER LOGO, NOW IT'S JUST TEXT -->
                     <!-- In the "font-size" style, specify the font size. In the "font-family" style, specify which font you want to use. -->
-                    <span style="font-size: 30px; font-family: Courier, New, sans-serif;">Skyra</span>
+                    <span style="font-size: 30px; font-family: Courier, New, sans-serif;">Skyracer</span>
                     <!-- If you want a picture of the logo, use the following tag :
                     <img style="max-width: 100px;" src="img/logo.png" alt="logo">
                     where in the "src" attribute you need to specify the path to the logo image. And in the "max-width" style, its width of image. So you can customize the size of the logo -->
