--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main-styles.css">
-    <title>Skyra | Virtual Travel Racing Game</title>
+    <title>Skyra :: Virtual Travel Racing Game</title>
 </head>
 
 <body>
